--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,14 @@
+.parent-home-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
 .home-container {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
-  max-width: 90%;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,4 +17,7 @@
 .home-search-container {
   display: flex;
   gap: 5rem;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
 }
