--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -16,8 +16,10 @@
 
 .home-search-container {
   display: flex;
+  flex-wrap: wrap;
   gap: 5rem;
   justify-content: center;
   align-items: center;
   height: 5rem;
+  margin: 1rem;
 }
